crates/hird-check/tests/snapshots/aliases__aliases_compose_in_any_order.snap
---
source: crates/hird-check/tests/aliases.rs
expression: "check_str(\"type alias IntPair = Pair<Int, Int>\\n\\\n         type alias Wrap<a> = Pair<a, Box<a>>\\n\\\n         type alias Pair<a, b> = (a, b)\\n\\\n         type alias Box<a> = { value: a }\\n\\\n         fn first(p: IntPair) -> Int = let (a, b) = p in a\\n\\\n         fn wrap(x: String) -> Wrap<String> = (x, { value: x })\")"
---
first : (Int, Int) → Int
wrap : String → (String, { value: String })
