crates/hird-check/tests/snapshots/aliases__tool_over_alias_derives_identical_invocation_record.snap
---
source: crates/hird-check/tests/aliases.rs
expression: aliased
---
log : { level: String, message: String } → () ! {Tool<Log>}
quiet : { level: String, message: String } → ()
record LogInvocation : { args: { level: String, message: String }, caller: CallerId, result: (), timestamp: Timestamp, tool: String }
